--- a/winampac3.rc
+++ b/winampac3.rc
@@ -54,7 +54,7 @@ BEGIN
                     149,8
     EDITTEXT        IDC_EDT_REFRESH_TIME,15,129,22,12,ES_AUTOHSCROLL
     GROUPBOX        "Interface options",IDC_GRP_INTERFACE,8,93,192,53
-    RTEXT           "AC3Filter ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
+    RTEXT           "WinampAC3 ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
                     IDC_VER,8,204,328,12,SS_CENTERIMAGE
     PUSHBUTTON      "Donate",IDC_BTN_DONATE,342,204,50,12,BS_FLAT
     EDITTEXT        IDC_EDT_ENV,210,17,177,56,ES_MULTILINE | ES_AUTOVSCROLL | 
@@ -131,7 +131,7 @@ BEGIN
     EDITTEXT        IDC_EDT_INFO,13,75,178,108,ES_MULTILINE | ES_READONLY | 
                     WS_VSCROLL
     GROUPBOX        "Decoder info",IDC_GRP_DECODER_INFO,8,64,188,136
-    RTEXT           "AC3Filter ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
+    RTEXT           "WinampAC3 ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
                     IDC_VER,8,204,328,12,SS_CENTERIMAGE
     PUSHBUTTON      "Donate",IDC_BTN_DONATE,342,204,50,12,BS_FLAT
     COMBOBOX        IDC_CMB_SPK,14,21,86,86,CBS_DROPDOWNLIST | WS_VSCROLL | 
@@ -263,7 +263,7 @@ BEGIN
     LTEXT           "SR'",IDC_LBL_MATRIX_OUT_SR,372,82,16,8
     LTEXT           "Sub",IDC_LBL_MATRIX_OUT_SW,372,95,16,8
     GROUPBOX        "Mixing matrix",IDC_GRP_MATRIX,192,8,200,102
-    RTEXT           "AC3Filter ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
+    RTEXT           "WinampAC3 ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
                     IDC_VER,8,204,328,12,SS_CENTERIMAGE
     PUSHBUTTON      "Donate",IDC_BTN_DONATE,342,204,50,12,BS_FLAT
     CTEXT           "Voice",IDC_LBL_VOICE,97,17,27,8
@@ -371,7 +371,7 @@ BEGIN
     GROUPBOX        "CPU",IDC_GRP_CPU,260,104,30,96
     GROUPBOX        "Input levels",IDC_GRP_INPUT_LEVELS,294,8,98,96
     GROUPBOX        "Output levels",IDC_GRP_OUTPUT_LEVELS,294,104,98,96
-    RTEXT           "AC3Filter ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
+    RTEXT           "WinampAC3 ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
                     IDC_VER,8,204,328,12,SS_CENTERIMAGE
     PUSHBUTTON      "Donate",IDC_BTN_DONATE,342,204,50,12,BS_FLAT
     CONTROL         "Progress1",IDC_OUT_SW,"msctls_progress32",PBS_VERTICAL | 
@@ -522,7 +522,7 @@ BEGIN
                     TBS_BOTH | WS_TABSTOP,362,122,27,60
     EDITTEXT        IDC_EDT_OUT_LFE,364,183,23,12,ES_AUTOHSCROLL
     GROUPBOX        "Output gains",IDC_GRP_OUTPUT_GAINS,180,104,212,96
-    RTEXT           "AC3Filter ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
+    RTEXT           "WinampAC3 ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
                     IDC_VER,8,204,328,12,SS_CENTERIMAGE
     PUSHBUTTON      "Donate",IDC_BTN_DONATE,342,204,50,12,BS_FLAT
     CTEXT           "Voice",IDC_LBL_VOICE,90,17,27,8
@@ -559,7 +559,7 @@ BEGIN
     CONTROL         "Slider3",IDC_SLI_EQ1,"msctls_trackbar32",TBS_VERT | 
                     TBS_BOTH | WS_TABSTOP,113,25,27,60
     EDITTEXT        IDC_EDT_EQ1,115,86,23,12,ES_AUTOHSCROLL
-    RTEXT           "AC3Filter ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
+    RTEXT           "WinampAC3 ver. %s Copyright (c) 2002-2008 by Alexander Vigovsky",
                     IDC_VER,8,204,328,12,SS_CENTERIMAGE
     PUSHBUTTON      "Donate",IDC_BTN_DONATE,342,204,50,12,BS_FLAT
     GROUPBOX        "Equalizer",IDC_GRP_EQ,106,8,286,96
